--- a/static/css/main.css
+++ b/static/css/main.css
@@ -301,6 +301,7 @@ h5 {
   font-size: 16px;
   color: #4b5c9d;
   text-decoration: underline;
+  cursor: pointer;
 }
 
 .btn,
@@ -543,10 +544,10 @@ input[type='file']:after {
 }
 
 .form-error {
-  border: 1px solid rgba(255, 35, 35, 0.77);
+  border: 1px dashed rgba(255, 35, 35, 0.77);
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  width: 50%;
+  max-width: 470px;
   color: rgba(255, 35, 35, 0.77);
   padding: 15px;
   margin: 0 auto;
@@ -1649,11 +1650,31 @@ select {
   margin-bottom: 70px;
 }
 
+.our-help-inner-full-review {
+  max-height: 0;
+  visibility: hidden;
+  border-bottom: 1px solid #dddde0;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  -webkit-transition: visibility .1s linear, max-height .2s linear;
+  -o-transition: visibility .1s linear, max-height .2s linear;
+  transition: visibility .1s linear, max-height .2s linear;
+}
+
+.our-help-inner-full-review.full-review-active {
+  max-height: 300px;
+  visibility: visible;
+  -webkit-transition: max-height .2s linear, visibility .1s linear .1s;
+  -o-transition: max-height .2s linear, visibility .1s linear .1s;
+  transition: max-height .2s linear, visibility .1s linear .1s;
+}
+
 .our-help-media {
   display: inline-block;
   border-radius: 10px;
   -webkit-box-shadow: 0 0 29px 0 rgba(60, 66, 91, 0.39);
   box-shadow: 0 0 29px 0 rgba(60, 66, 91, 0.39);
+  height: 435px;
 }
 
 .our-help-info p {
@@ -1711,6 +1732,10 @@ select {
   line-height: 24px;
   font-size: 14px;
   width: 260px;
+}
+
+.our-help-media-slide-image img {
+  border-radius: 10px;
 }
 
 .controls {
@@ -1941,6 +1966,10 @@ select {
   font-size: 18px;
   color: #009cff;
   display: inline-block;
+}
+
+.all-prices {
+  margin-bottom: 100px;
 }
 
 .price-search {
@@ -2461,6 +2490,7 @@ select {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  overflow: auto;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
@@ -2762,6 +2792,10 @@ select {
 }
 
 @media (max-width: 556px) {
+  .form-error {
+    max-width: 360px;
+  }
+
   .form-control-lg {
     grid-column: span 1;
   }
@@ -2769,5 +2803,10 @@ select {
   .calculation-form-footer {
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-gap: 30px;
+    max-width: 360px;
+  }
+
+  .form-row {
+    max-width: 360px;
   }
 }
