--- a/static/sass/_modal.sass
+++ b/static/sass/_modal.sass
@@ -6,6 +6,7 @@
   &-content
     position: fixed
     display: flex
+    overflow: auto
     //padding-bottom: 15px
     //padding-top: 15px
     flex-direction: column
