--- a/static/sass/_form_controls.sass
+++ b/static/sass/_form_controls.sass
@@ -44,7 +44,7 @@ input[type='file']
   color: $error
   padding: 15px
   margin: 0 auto
-  display: none
+  //display: none
 @media (max-width: 556px)
   .form-error
     max-width: 360px
